Исправил ошибку с изоюражениями

--- a/Atom_Heart_Mother.html
+++ b/Atom_Heart_Mother.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">Atom Heart Mother</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\images.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\images.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Atom Heart Mother" — пятый студийный альбом Pink Floyd, выпущенный 2 октября 1970 года. 
             Альбом знаменует переход к прогрессивному року с использованием оркестра и хора, создавая масштабное звучание.
