--- a/More.html
+++ b/More.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">More</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\More_Pink_Floyd_Cover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\More_Pink_Floyd_Cover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "More" — третий студийный альбом Pink Floyd, выпущенный 13 июня 1969 года. Созданный как саундтрек к фильму Барбета Шрёдера,
             альбом включает эклектичные треки, от психоделических до акустических, с экспериментальным подходом.
