--- a/Obscured.html
+++ b/Obscured.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">Obscured by Clouds</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Pink_Floyd_-_Obscured_by_Clouds.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Pink_Floyd_-_Obscured_by_Clouds.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Obscured by Clouds" — седьмой студийный альбом Pink Floyd, выпущенный 2 июня 1972 года. 
             Созданный как саундтрек к фильму "La Vallée", альбом представляет собой коллекцию мелодичных и атмосферных треков.
