--- a/the_wall.html
+++ b/the_wall.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">The Wall</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\the_wall.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\the_wall.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Wall" — одиннадцатый студийный альбом Pink Floyd, выпущенный 30 ноября 1979 года.
              Рок-опера, созданная Роджером Уотерсом, рассказывает о Пинке, рок-звезде, строящей метафорическую стену из-за личных 
