--- a/Lapse_of_Reason.html
+++ b/Lapse_of_Reason.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">A Momentary Lapse of Reason</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Lapse-l.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Lapse-l.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "A Momentary Lapse of Reason" — тринадцатый студийный альбом Pink Floyd, выпущенный 7 сентября 1987 года. 
             Первый альбом без Роджера Уотерса, созданный под руководством Дэвида Гилмора, с фокусом на атмосферном звучании.
