--- a/Meddle.html
+++ b/Meddle.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">Meddle</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Meddle_album_cover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Meddle_album_cover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Meddle" — шестой студийный альбом Pink Floyd, выпущенный 30 октября 1971 года. 
             Альбом стал важным шагом к зрелому звучанию группы, сочетая эксперименты с мелодичными композициями.
