--- a/Saucerful.html
+++ b/Saucerful.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">A Saucerful of Secrets</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Saucerful_of_secrets2.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Saucerful_of_secrets2.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "A Saucerful of Secrets" — второй студийный альбом Pink Floyd, выпущенный 29 июня 1968 года. Это переходная работа, 
             созданная в период ухода Сида Барретта и прихода Дэвида Гилмора, сочетающая психоделию с зарождающимся прогрессивным роком.
