--- a/The_Division_Bell.html
+++ b/The_Division_Bell.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">The Division Bell</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Pink_floyd_—_The_Division_Bell_front.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Pink_floyd_—_The_Division_Bell_front.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Division Bell" — четырнадцатый студийный альбом Pink Floyd, выпущенный 28 марта 1994 года. 
             Альбом исследует темы общения и человеческих отношений, с акцентом на мелодичное и атмосферное звучание.
