--- a/The_Endless_River.html
+++ b/The_Endless_River.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">The Endless River</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Pink_Floyd_-_The_Endless_River_(Artwork).jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Pink_Floyd_-_The_Endless_River_(Artwork).jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Endless River" — пятнадцатый и последний студийный альбом Pink Floyd, выпущенный 10 ноября 2014 года. 
             Преимущественно инструментальная работа, основанная на записях Ричарда Райта, служит данью его памяти.
