--- a/Ummagumma.html
+++ b/Ummagumma.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">Ummagumma</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\PinkFloyd-album-ummagummastudio-300.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\PinkFloyd-album-ummagummastudio-300.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Ummagumma" — четвёртый альбом Pink Floyd, выпущенный 7 ноября 1969 года. Двойной альбом состоит из живых записей и 
             студийных экспериментов, где каждый участник группы представил свои сольные композиции.
