--- a/animals.html
+++ b/animals.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">Animals</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\Animals.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\Animals.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Animals" — десятый студийный альбом Pink Floyd, выпущенный 23 января 1977 года. 
             Вдохновлённый «Скотным двором» Джорджа Оруэлла, альбом критикует общество через метафоры животных (свиньи, собаки, овцы).
