--- a/wish_you.html
+++ b/wish_you.html
@@ -10,13 +10,13 @@
         <hr>
         <table>
             <tr>
-                <td><a href="website.html">Главная</a></td>
+                <td><a href="index.html">Главная</a></td>
                 <td><a href="about.html">Дискография</a></td>
                 <td><a href="contact.html">Обратная связь</a></td>
             </tr>
         </table>
         <h2 class="key-albums">Wish You Were Here</h2>
-        <img src="C:\Users\honor\Desktop\pinkfloydproject\frontend\images\WishYouWereHere.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="C:\Users\honor\Desktop\my-website\images\1848_1.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Wish You Were Here" — девятый студийный альбом Pink Floyd, выпущенный 12 сентября 1975 года. Это посвящение Сиду Барретту, исследующее темы отчуждения, отсутствия и коррупции в музыкальной индустрии. Альбом известен сложной продюсерской работой и эмоциональной гитарной игрой Дэвида Гилмора.
             <br>
