--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
     <h2 class="key-albums">Легенды прогрессивного рока</h2>
-    <img src="C:\Users\honor\Desktop\my-website\images\pinkfloyd.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+    <img src="\my-website\images\Pink_Floyd_-_all_members.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
     <p>
         Pink Floyd — британская рок-группа, основанная в 1965 году, которая стала одной из самых влиятельных в истории музыки. 
         Их творчество сочетает психоделический рок, прогрессивные мелодии и философские тексты.
