Исправил ошибку с изображениями

--- a/Atom_Heart_Mother.html
+++ b/Atom_Heart_Mother.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">Atom Heart Mother</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\images.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\images.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Atom Heart Mother" — пятый студийный альбом Pink Floyd, выпущенный 2 октября 1970 года. 
             Альбом знаменует переход к прогрессивному року с использованием оркестра и хора, создавая масштабное звучание.
