--- a/Lapse_of_Reason.html
+++ b/Lapse_of_Reason.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">A Momentary Lapse of Reason</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Lapse-l.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Lapse-l.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "A Momentary Lapse of Reason" — тринадцатый студийный альбом Pink Floyd, выпущенный 7 сентября 1987 года. 
             Первый альбом без Роджера Уотерса, созданный под руководством Дэвида Гилмора, с фокусом на атмосферном звучании.
