--- a/Meddle.html
+++ b/Meddle.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">Meddle</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Meddle_album_cover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Meddle_album_cover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Meddle" — шестой студийный альбом Pink Floyd, выпущенный 30 октября 1971 года. 
             Альбом стал важным шагом к зрелому звучанию группы, сочетая эксперименты с мелодичными композициями.
