--- a/Obscured.html
+++ b/Obscured.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">Obscured by Clouds</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Pink_Floyd_-_Obscured_by_Clouds.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Pink_Floyd_-_Obscured_by_Clouds.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Obscured by Clouds" — седьмой студийный альбом Pink Floyd, выпущенный 2 июня 1972 года. 
             Созданный как саундтрек к фильму "La Vallée", альбом представляет собой коллекцию мелодичных и атмосферных треков.
