--- a/Saucerful.html
+++ b/Saucerful.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">A Saucerful of Secrets</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Saucerful_of_secrets2.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Saucerful_of_secrets2.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "A Saucerful of Secrets" — второй студийный альбом Pink Floyd, выпущенный 29 июня 1968 года. Это переходная работа, 
             созданная в период ухода Сида Барретта и прихода Дэвида Гилмора, сочетающая психоделию с зарождающимся прогрессивным роком.
