--- a/animals.html
+++ b/animals.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">Animals</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Animals.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Animals.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Animals" — десятый студийный альбом Pink Floyd, выпущенный 23 января 1977 года. 
             Вдохновлённый «Скотным двором» Джорджа Оруэлла, альбом критикует общество через метафоры животных (свиньи, собаки, овцы).
