--- a/piper_of_the.html
+++ b/piper_of_the.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">The Piper at the Gates of Dawn</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\PinkFloyd_PiperAtTheGatesOfDawn.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\PinkFloyd_PiperAtTheGatesOfDawn.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Piper at the Gates of Dawn" — дебютный студийный альбом Pink Floyd, выпущенный 5 августа 1967 года.
              Созданный под влиянием Сида Барретта, альбом представляет собой яркую психоделическую работу с 
