--- a/the_wall.html
+++ b/the_wall.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">The Wall</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\the_wall.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\the_wall.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Wall" — одиннадцатый студийный альбом Pink Floyd, выпущенный 30 ноября 1979 года.
              Рок-опера, созданная Роджером Уотерсом, рассказывает о Пинке, рок-звезде, строящей метафорическую стену из-за личных 
