--- a/The_Division_Bell.html
+++ b/The_Division_Bell.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">The Division Bell</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Pink_floyd_—_The_Division_Bell_front.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Pink_floyd_—_The_Division_Bell_front.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Division Bell" — четырнадцатый студийный альбом Pink Floyd, выпущенный 28 марта 1994 года. 
             Альбом исследует темы общения и человеческих отношений, с акцентом на мелодичное и атмосферное звучание.
