--- a/The_Endless_River.html
+++ b/The_Endless_River.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">The Endless River</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Pink_Floyd_-_The_Endless_River_(Artwork).jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Pink_Floyd_-_The_Endless_River_(Artwork).jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Endless River" — пятнадцатый и последний студийный альбом Pink Floyd, выпущенный 10 ноября 2014 года. 
             Преимущественно инструментальная работа, основанная на записях Ричарда Райта, служит данью его памяти.
