--- a/The_Final.html
+++ b/The_Final.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">The Final Cut</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\Thefinalcutcover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\Thefinalcutcover.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Final Cut" — двенадцатый студийный альбом Pink Floyd, выпущенный 21 марта 1983 года. 
             Во многом проект Роджера Уотерса, альбом посвящён антивоенной тематике, вдохновлённой Фолклендской войной и личными переживаниями.
