--- a/Ummagumma.html
+++ b/Ummagumma.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">Ummagumma</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\PinkFloyd-album-ummagummastudio-300.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\PinkFloyd-album-ummagummastudio-300.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "Ummagumma" — четвёртый альбом Pink Floyd, выпущенный 7 ноября 1969 года. Двойной альбом состоит из живых записей и 
             студийных экспериментов, где каждый участник группы представил свои сольные композиции.
