--- a/dark_side.html
+++ b/dark_side.html
@@ -16,7 +16,7 @@
             </tr>
         </table>
         <h2 class="key-albums">The Dark Side of the Moon</h2>
-        <img src="C:\Users\honor\Desktop\my-website\images\dark_side.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
+        <img src="\my-website\images\dark_side.jpg" vspace="4" hspace="25" align="left" width="300" height="300">
         <p>
             "The Dark Side of the Moon" — восьмой студийный альбом Pink Floyd, выпущенный 1 марта 1973 года. 
             Это концептуальная работа, исследующая темы жизни, времени, жадности и смерти через сложные музыкальные аранжировки и глубокие тексты.
